# PicoPDU

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  README.md  RP2350_RTOS_Project_Assambly.c  main.c
fs/: index.shtml
inc/: FreeRTOSConfig.h  fsdata.c  http_server.h  i2c_lcd.h  lwipopts.h  main_shared.h  pdu_config.h  web_server.h
src/: dfplayer.c  http_server.c  i2c_lcd.c  main.c  web_server.c
src/web/: index.html
tools/: html2c.py
